# Game-of-life

./: CMakeLists.txt  README.md  main.cpp
include/: GameArea.hpp  GameEvents.hpp  GameMenu.hpp  GameWindow.hpp
src/: GameArea.cpp  GameMenu.cpp  GameWindow.cpp
